--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
       <section class="hire">
         <div class="bg" aria-hidden="true"></div>
         <div class="hireInner">
+          <p id="test"></p>
           <div class="hireTit">
             <strong class="secTit" data-show="hr">HIRE <span class="focus">ME</span></strong>
             <p class="subTit" data-show="hr">
