webcash project edit

--- a/works/webcash/index.html
+++ b/works/webcash/index.html
@@ -61,10 +61,9 @@
                 <p class="skill">Jquery</p>
               </div>
               <div class="desc">
-                <p>어드민 형식의 웹 애플리케이션 UI 개발을 담당하며, W2UI 그리드 데이터의 화면 안정성을 유지하는 데 주력했습니다.</p>
-                <p>또한, 홈페이지를 작업하면서 Ajax를 활용한 비동기 통신과 구글 애널리틱스를 적용해 사용자 행동 데이터를 분석하고 SEO 역량을 강화했습니다.</p>
-              </div>
-              <a class="moveCareer show" href="https://www.wemembers.net/" rel="noopener noreferrer" target="_blank">홈페이지로 이동</a>
+                <p>경리나라, 수임처, 법인세 등 웹 서비스의 UI를 만드는 프로젝트에 참여해 그룹사인 웹케시와 다양한 협업을 경험했습니다. 기존 서비스의 안정적인 운영을 위해 유지보수와 개선 작업을 진행하는 한편, 새로운 서비스의 UI 개발 업무도 맡았습니다.</p>
+                <p>팀 단위로 함께 작업하면서 더 나은 방법론을 적용할 수 있을지 함께 고민하거나 서로의 경험과 지식을 공유함으로써 보다 효율적이고 향상된 코드를 작성할 수 있었습니다.</p>
+              </div>            
             </div>
           </div>
         </div>
@@ -96,7 +95,7 @@
                   <img src="../../images/bg/preview_webcash03.png" alt="작업물 스크린샷">
                 </div>
                 <figcaption class="desc">
-                  <p>레거시 코드를 삭제하면서도 기존 코딩 컨벤션을 유지하는 데 신경 썼고, 일관된 인터페이스와 재사용성을 위해 기획, 디자인팀과 협업하여 작업된 화면을 공유했습니다.</p>
+                  <p>기존 코딩 컨벤션을 유지하는 데 신경 썼고, 일관된 인터페이스와 재사용성을 위해 기획, 디자인팀과 협업하여 작업된 화면을 공유했습니다.</p>
                 </figcaption>
               </figure>
             </div>
