--- a/works/semor_app/index.html
+++ b/works/semor_app/index.html
@@ -62,7 +62,7 @@
               </div>
               <div class="desc">
                 <p>소상공인 절세 플랫폼 앱 퍼블리싱 업무를 수행하며, 사용자 친화적인 UI/UX를 구현하고 최적화된 화면을 제작했습니다. 형상관리를 위해 개발팀과 협력하여 내부망 접속 환경을 마련하고 SVN 시스템을 활용해 코드 변경 이력을 체계적으로 관리했습니다.</p>
-                <p>비개발 직군의 테스트 효율성을 높이기 위해, 기획, 디자인, 퍼블리싱, 개발 간의 협업을 통해 화면번호 체계를 통일했습니다. 이를 통해 각 팀은 일관된 기준을 바탕으로 작업할 수 있게 되었고, 결과적으로 테스트와 작업 속도가 개선되었습니다..</p>
+                <p>비개발 직군의 테스트 효율성을 높이기 위해, 기획, 디자인, 퍼블리싱, 개발 간의 협업을 통해 화면번호 체계를 통일했습니다. 이를 통해 각 팀은 일관된 기준을 바탕으로 작업할 수 있게 되었고, 결과적으로 테스트와 작업 속도가 개선되었습니다.</p>
               </div>
               <a class="moveCareer show" href="project/" rel="noopener noreferrer" target="_blank">프로젝트로 이동</a>
             </div>
