--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 </a>
               </div>
               <div class="workItem" data-show="wk">
-                <a href="works/webcash/">
+                <a href="works/partner/">
                   <div class="itemCard">
                     <img src="images/ico/ico_atoz.png" alt="A to Z">
                   </div>
