--- a/works/semor_app/project/index.html
+++ b/works/semor_app/project/index.html
@@ -129,7 +129,7 @@
                             <td class="depth4"></td>
                             <td class="depth5"></td>
                             <td class="pId"><a href="html/vwmr/vwmr_rept_701.html" target="_blank">vwmr_rept_701.html</a></td>
-                            <td class="remark">20130712 납부하기추가</td>
+                            <td class="remark"></td>
                         </tr>
                         <tr class="">
                             <td class="depth2"></td>
@@ -137,7 +137,7 @@
                             <td class="depth4"></td>
                             <td class="depth5"></td>
                             <td class="pId"><a href="html/vwmr/vwmr_rept_701AA.html" target="_blank">vwmr_rept_701AA.html</a></td>
-                            <td class="remark">20130712 납부하기추가</td>
+                            <td class="remark"></td>
                         </tr>
                         <tr class="">
                             <td class="depth2"></td>
@@ -481,7 +481,7 @@
                           <td class="depth4"></td>
                           <td class="depth5"></td>
                           <td class="pId"><a href="html/vwmr/vwmr_tab_001.html" target="_blank">vwmr_tab_001.html</a></td>
-                          <td class="remark">[SD005] 세무카페 개선</td>
+                          <td class="remark"></td>
                       </tr>
                       <tr class="">
                           <td class="depth2"></td>
@@ -522,7 +522,7 @@
                               <td class="depth4"></td>
                               <td class="depth5"></td>
                               <td class="pId"><a href="html/user/user_join_003.html" target="_blank">user_join_003.html</a></td>
-                              <td class="remark">20230421 - 화면번호변경</td>
+                              <td class="remark"></td>
                           </tr>
                           <tr class="">
                               <td class="depth2"></td>
@@ -530,7 +530,7 @@
                               <td class="depth4"></td>
                               <td class="depth5"></td>
                               <td class="pId"><a href="html/user/user_join_003_3.html" target="_blank">user_join_003_3.html</a></td>
-                              <td class="remark">20230421 - 화면번호변경</td>
+                              <td class="remark"></td>
                           </tr>
                           <tr class="">
                               <td class="depth2"></td>
