--- a/works/semor_pc/index.html
+++ b/works/semor_pc/index.html
@@ -54,6 +54,7 @@
             <div class="summaryTop">
               <strong class="secTit">WORK DETAIL</strong>
               <h2 class="workTit">세모리포트 WEB APP / 홈페이지</h2>
+              <p class="contribution">기여도: 100% (구축) / 유지보수 : 100%</p>
             </div>
             <div class="summaryBottom">
               <div class="workSkills">
@@ -61,8 +62,8 @@
                 <p class="skill">Google Analytics</p>
               </div>
               <div class="desc">
-                <p>어드민 형식의 웹 애플리케이션 UI 개발을 담당하며, W2UI 그리드 데이터의 화면 안정성을 유지하는 데 주력했습니다.</p>
-                <p>또한, 홈페이지를 작업하면서 Ajax를 활용한 비동기 통신과 구글 애널리틱스를 적용해 사용자 행동 데이터를 분석하고 SEO 역량을 강화했습니다.</p>
+                <p>세무사무소 솔루션을 위한 홈페이지를 작업하면서 SEO 역량을 강화함과 동시에, Ajax를 활용한 비동기 통신과 구글 애널리틱스를 적용해 사용자 행동 데이터를 분석했습니다.</p>
+                <p>또한, 홈페이지와 연계된 어드민 형식의 웹 애플리케이션 UI 개발을 담당하며, W2UI 그리드 데이터의 화면 안정성을 유지하는 데 주력했습니다.</p>
               </div>
               <div class="moveCareerWrap">
                 <a class="moveCareer show" href="project/" rel="noopener noreferrer" target="_blank">프로젝트로 이동</a>
@@ -78,7 +79,7 @@
                 <img src="../../images/bg/preview_semor_pc.png" alt="작업물 스크린샷">
               </div>
               <figcaption class="desc">
-                <p>동적 좌표 탐색 튜토리얼을 개발해 신규 사용자가 쉽게 적응할 수 있도록 직관적인 가이드를 제공했습니다.</p>        
+                <p>노트북부터 데스크탑까지 다양한 환경에서도 그리드 데이터가 안정적으로 유지되는 것에 신경써서 작업했으며, 동적 좌표 탐색 튜토리얼을 개발해 신규 사용자가 쉽게 적응할 수 있도록 직관적인 가이드를 제공했습니다.</p>        
               </figcaption>
             </figure>
           </div>
@@ -86,20 +87,20 @@
             <div class="left">
               <figure>
                 <div class="thum">
-                  <img src="../../images/bg/preview_semor_pc02.png" alt="작업물 스크린샷">
+                  <img src="../../images/bg/preview_semor_pc03.png" alt="작업물 스크린샷">
                 </div>
                 <figcaption class="desc">
-                  <p>이 과정에서 기술 공유를 위해 가이드 문서를 작성하고 팀원들과 지속적으로 공유했습니다.</p>
+                  <p>홈페이지 퍼블리싱 과정에서 AJAX 통신을 활용해 가입자 데이터를 불러오고, 폼 유효성 검사와 주소 API를 적용하여 도입 신청 페이지를 구현했습니다.</p>
                 </figcaption>
               </figure>
             </div>
             <div class="right">
               <figure>
                 <div class="thum">
-                  <img src="../../images/bg/preview_semor_pc03.png" alt="작업물 스크린샷">
+                  <img src="../../images/bg/preview_semor_pc02.png" alt="작업물 스크린샷">
                 </div>
                 <figcaption class="desc">
-                  <p>폼 유효성 검사와 주소 API를 적용하여 주소 검색 기능을 구현했습니다. 이 기능은 사용자 입력 오류를 줄이고, 주소 검색 과정을 보다 직관적으로 만들어 사용자 편의성을 높이는 데 중점을 두었습니다.</p>
+                  <p>이 과정에서 기술 공유를 위해 가이드 문서를 작성하고 팀원들과 지속적으로 공유했습니다.</p>
                 </figcaption>
               </figure>
             </div>
