--- a/works/partner/index.html
+++ b/works/partner/index.html
@@ -11,14 +11,14 @@
   <meta property="og:title" content="JIN | 위멤버스 리뉴얼 & 유지보수">
   <meta property="og:description" content="사용하기 쉬운 UI와 기억에 남는 UX를 개발하는 일을 합니다.">
   <meta property="og:image" content="https://jinseungyeol.github.io/images/bg/bg_portfolio_intro.png">
-  <meta property="og:url" content="https://jinseungyeol.github.io/works/webcash/">
+  <meta property="og:url" content="https://jinseungyeol.github.io/works/partner/">
   <meta property="og:type" content="website">
   <!-- 트위터 -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="JIN | 위멤버스 리뉴얼 & 유지보수">
   <meta name="twitter:description" content="사용하기 쉬운 UI와 기억에 남는 UX를 개발하는 일을 합니다.">
   <meta name="twitter:image" content="https://jinseungyeol.github.io/images/bg/bg_portfolio_intro.png">
-  <meta name="twitter:url" content="https://jinseungyeol.github.io/works/webcash/">
+  <meta name="twitter:url" content="https://jinseungyeol.github.io/works/partner/">
   <!-- CSS -->
   <link rel="icon" href="../../images/ico/ico_favicon.ico">
   <link rel="stylesheet" href="../../css/reset.css">
@@ -45,7 +45,7 @@
     <!-- //header -->
     <!-- container -->
     <div class="container">
-      <div class="workDetail webcash">
+      <div class="workDetail partner">
         <div class="workInfo">
           <div class="workIcon">
             <img src="../../images/ico/ico_atoz.png" alt="서비스 A부터 Z까지의 전 과정">
@@ -53,7 +53,8 @@
           <div class="workSummary">
             <div class="summaryTop">
               <strong class="secTit">WORK DETAIL</strong>
-              <h2 class="workTit">위멤버스 리뉴얼 & 유지보수</h2>
+              <h2 class="workTit">그룹사 및 파트너사 유지운영</h2>
+              <p class="contribution">기여도: 50% (구축) / 유지보수 : 100%</p>
             </div>
             <div class="summaryBottom">
               <div class="workSkills">
@@ -61,8 +62,8 @@
                 <p class="skill">Jquery</p>
               </div>
               <div class="desc">
-                <p>경리나라, 수임처, 법인세 등 웹 서비스의 UI를 만드는 프로젝트에 참여해 그룹사인 웹케시와 다양한 협업을 경험했습니다. 기존 서비스의 안정적인 운영을 위해 유지보수와 개선 작업을 진행하는 한편, 새로운 서비스의 UI 개발 업무도 맡았습니다.</p>
-                <p>팀 단위로 함께 작업하면서 더 나은 방법론을 적용할 수 있을지 함께 고민하거나 서로의 경험과 지식을 공유함으로써 보다 효율적이고 향상된 코드를 작성할 수 있었습니다.</p>
+                <p>경리나라, 수임처, 법인세 등 웹 서비스의 UI를 만드는 그룹사인 웹케시의 프로젝트에 참여해 다양한 협업을 경험했습니다. 기존 서비스의 안정적인 운영을 위해 유지보수와 개선 작업을 진행하는 한편, 새로운 서비스의 UI 개발 업무도 맡았습니다.</p>
+                <p>소상공인 절세 플랫폼 세모장부와 파트너사(NH소상공인파트너, KT 장부비서, I-ONE 소상공인) 하이브리드 앱의 유지운영과 신규 페이지 퍼블리싱을 담당하며, 클라이언트 요청에 신속히 대응했습니다.</p>
               </div>            
             </div>
           </div>
@@ -71,10 +72,10 @@
           <div class="fullContents">
             <figure>
               <div class="thum">
-                <img src="../../images/bg/preview_webcash.png" alt="작업물 스크린샷">
+                <img src="../../images/bg/preview_partner.png" alt="작업물 스크린샷">
               </div>
               <figcaption class="desc">
-                <p>기존 홈페이지를 리뉴얼하며 디자인 요소와 사용자 인터페이스(UI)를 개선하여, 더욱 직관적이고 반응성이 뛰어난 웹 환경을 제공했습니다.</p>        
+                <p>웹케시 상품의 유지운영과 신규 퍼블리싱을 담당하며, 기존 코딩 컨벤션을 준수하고 불필요한 레거시 코드를 제거하며 작업을 진행했습니다. 또한, 일관된 인터페이스와 재사용성을 확보하기 위해 기획 및 디자인팀과 긴밀히 협업하여 화면 설계를 공유하고 반영했습니다.</p>        
               </figcaption>
             </figure>
           </div>
@@ -82,23 +83,25 @@
             <div class="left">
               <figure>
                 <div class="thum">
-                  <img src="../../images/bg/preview_webcash02.png" alt="작업물 스크린샷">
+                  <img src="../../images/bg/preview_partner02.png" alt="작업물 스크린샷">
                 </div>
                 <figcaption class="desc">
-                  <p>웹케시 그룹사와 협업하며 다른 회사의 컨벤션을 참고해 시야를 넓힐 수 있는 기회를 가졌습니다.</p>
+                  <p>하이브리드 앱 퍼블리싱을 진행하며 iOS와 Android 등 다양한 모바일 기기에 대응할 수 있도록 벤더 프리픽스를 활용하여 작업했습니다.</p>
                 </figcaption>
               </figure>
             </div>
             <div class="right">
               <figure>
                 <div class="thum">
-                  <img src="../../images/bg/preview_webcash03.png" alt="작업물 스크린샷">
+                  <img src="../../images/bg/preview_partner03.png" alt="작업물 스크린샷">
                 </div>
                 <figcaption class="desc">
-                  <p>기존 코딩 컨벤션을 유지하는 데 신경 썼고, 일관된 인터페이스와 재사용성을 위해 기획, 디자인팀과 협업하여 작업된 화면을 공유했습니다.</p>
+                  <p>NH, KT는 동일한 UI를 사용하여, root 변수를 통해 각 앱에 맞게 메인 색상과 스타일을 분기 처리하여 적용했습니다.</p>
                 </figcaption>
               </figure>
             </div>
+            
+            
           </div>
         </div>
         <div class="hire">
