--- a/works/roumit/index.html
+++ b/works/roumit/index.html
@@ -54,6 +54,7 @@
             <div class="summaryTop">
               <strong class="secTit">WORK DETAIL</strong>
               <h2 class="workTit">로움아이티 기업 홈페이지</h2>
+              <p class="contribution">기여도: 100% (구축) / 유지보수 : 100%</p>
             </div>
             <div class="summaryBottom">
               <div class="workSkills">
@@ -61,8 +62,8 @@
                 <p class="skill">AWS</p>
               </div>
               <div class="desc">
-                <p>AWS의 S3, Route53, CloudFront를 활용해 기업 소개를 위한 원페이지 웹사이트를 제작 및 배포했습니다. 스크롤 인터렉션을 통해 사용자의 이목을 끌고 콘텐츠에 집중할 수 있게 합니다.</p>
-                <p>디자이너와 기획 단계부터 함께 논의하며 보다 적합한 UI를 제공할 수 있도록 했습니다. 반응형 UI와 섹션별 인터렉션을 제안해 결과물의 완성도를 더욱 높였습니다.</p>
+                <p>기업 소개를 위한 원페이지 웹사이트를 제작했습니다. 스크롤 인터렉션을 통해 사용자의 이목을 끌고 콘텐츠에 집중할 수 있게 합니다.</p>
+                <p>디자이너와 기획 단계부터 함께 논의하며 보다 적합한 UI를 제공할 수 있도록 했습니다. 반응형 UI와 섹션별 인터렉션을 제안해 결과물의 완성도를 더욱 높였고, AWS의 S3, Route53, CloudFront를 활용해 배포하였습니다.</p>
               </div>
               <a class="moveCareer show" href="https://www.roumit.com/" rel="noopener noreferrer" target="_blank">페이지로 이동</a>
             </div>
