--- a/works/semor_app/index.html
+++ b/works/semor_app/index.html
@@ -54,6 +54,7 @@
             <div class="summaryTop">
               <strong class="secTit">WORK DETAIL</strong>
               <h2 class="workTit">세모리포트 APP</h2>
+              <p class="contribution">기여도: 100% (구축) / 유지보수 : 100%</p>
             </div>
             <div class="summaryBottom">
               <div class="workSkills">
@@ -61,8 +62,8 @@
                 <p class="skill">Chart.js</p>
               </div>
               <div class="desc">
-                <p>소상공인 절세 플랫폼 앱 퍼블리싱 업무를 수행하며, 사용자 친화적인 UI/UX를 구현하고 최적화된 화면을 제작했습니다. 형상관리를 위해 개발팀과 협력하여 내부망 접속 환경을 마련하고 SVN 시스템을 활용해 코드 변경 이력을 체계적으로 관리했습니다.</p>
-                <p>비개발 직군의 테스트 효율성을 높이기 위해, 기획, 디자인, 퍼블리싱, 개발 간의 협업을 통해 화면번호 체계를 통일했습니다. 이를 통해 각 팀은 일관된 기준을 바탕으로 작업할 수 있게 되었고, 결과적으로 테스트와 작업 속도가 개선되었습니다.</p>
+                <p>소상공인 절세 플랫폼 하이브리드앱 퍼블리싱 업무를 수행하며, 모바일 사용자의 친화적 UI/UX를 구현하고 최적화된 화면을 제작했습니다.</p>
+                <p>팝업 호출 및 종료 등 UI 동적 컨트롤을 위한 Jquery 공통 함수를 작성과 더불어, 퍼블리싱 가이드 작업도 함께 진행했습니다.</p>
               </div>
               <a class="moveCareer show" href="project/" rel="noopener noreferrer" target="_blank">프로젝트로 이동</a>
             </div>
@@ -75,7 +76,7 @@
                 <img src="../../images/bg/preview_semor_app.png" alt="작업물 스크린샷">
               </div>
               <figcaption class="desc">
-                <p>UI 컨트롤을 효율적으로 관리하기 위해 공통 함수를 처리하고, UIKIT을 구축하였습니다. 프로젝트 내에 별도의 '마크업 UIKIT' 페이지를 생성하여, 팀원들이 해당 UI 요소와 가이드를 손쉽게 확인하고 활용할 수 있도록 했습니다. 이를 통해 UI 작업의 일관성과 생산성을 높였습니다.</p>        
+                <p>'마크업 UIKIT' 페이지를 생성하여, 팀원들이 해당 UI 요소와 가이드를 손쉽게 확인하고 활용할 수 있도록 했습니다. 이를 통해 UI 작업의 일관성과 생산성을 높였습니다.</p>        
               </figcaption>
             </figure>
           </div>
@@ -86,7 +87,7 @@
                   <img src="../../images/bg/preview_semor_app02.png" alt="작업물 스크린샷">
                 </div>
                 <figcaption class="desc">
-                  <p>테이블 형식의 마크업 페이지를 제작하여 타 팀에서도 화면 테스트를 손쉽게 진행할 수 있도록 지원했습니다. 또한, 마우스 호버 시 미리보기 화면이 노출되도록 구현하여, 각 화면의 내용을 직관적으로 확인할 수 있게 했습니다. 이를 통해 테스트 효율성을 크게 향상시켰습니다.</p>
+                  <p>테이블 형식의 마크업 페이지를 제작하여 타 팀에서도 화면 테스트를 손쉽게 진행할 수 있도록 지원했습니다. 테스트 효율성을 높이기 위해 협의하여 화면번호 체계를 통일했습니다.</p>
                 </figcaption>
               </figure>
             </div>
@@ -96,7 +97,7 @@
                   <img src="../../images/bg/preview_semor_app03.png" alt="작업물 스크린샷">
                 </div>
                 <figcaption class="desc">
-                  <p>Chart.js와 Mobiscroll.js를 활용하여 차트와 달력을 커스텀 구현하였습니다. 특히, 금융권 프로젝트에서 이를 적용하며 데이터 시각화와 사용자 경험을 강화할 수 있었습니다. 이 과정에서 금융권 특유의 요구사항을 이해하고 반영하며 소중한 경험을 쌓을 수 있었습니다.</p>
+                  <p>Chart.js와 Mobiscroll.js를 활용하여 차트와 달력을 커스텀 구현하였습니다. 이를 적용하며 데이터 시각화와 사용자 경험을 강화할 수 있었습니다. 이 과정에서 금융권 특유의 요구사항을 이해하고 반영하며 소중한 경험을 쌓을 수 있었습니다.</p>
                 </figcaption>
               </figure>
             </div>
